--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-headroom": "^3.2.1",
@@ -24,6 +25,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-type-animation": "^3.2.0",
+    "recharts": "^2.10.2",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1"
   },
